--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>
-        WELCOME BACK !
-    </h1>
-</body>
+  </head>
+  <body>
+    <h1>WELCOME BACK !</h1>
+    <h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur itaque
+        fuga non harum nisi? Aperiam laudantium illum placeat nisi temporibus,
+        praesentium possimus nostrum incidunt minima amet, fuga perspiciatis
+        laborum tempora.
+      </p>
+    </h2>
+  </body>
 </html>
